[package]
name = "AdventOfCode2015"
version = "0.1.0"
authors = ["Wilco Kusee <wilcokusee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
itertools = "0.9"
permutohedron = "0.2.4"
serde_json = "1.0"