[package]
name = "AdventOfCode2019"
version = "0.1.0"
authors = ["Wilco Kusee <wilcokusee@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8"
permutohedron = "0.2.4"
num-integer = "0.1.41"
rayon = "1.2.1"
rand = "0.7.2"
bit-vec = "0.6.1"
mod_exp = "1.0.1"

[profile.release]
debug = true
